@@ -12,7 +12,6 @@ package org.opensmartgridplatform.adapter.protocol.dlms.application.services;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.DlmsDevice;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.SecurityKeyType;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.GetKeysRequestDto;
@@ -48,9 +47,7 @@ public class GetKeysService {
       final MessageMetadata messageMetadata) {
 
     final List<SecurityKeyType> securityKeyTypes =
-        getKeysRequestDto.getSecretTypes().stream()
-            .map(this::convertToSecurityKeyType)
-            .collect(Collectors.toList());
+        getKeysRequestDto.getSecretTypes().stream().map(this::convertToSecurityKeyType).toList();
 
     final Map<SecurityKeyType, byte[]> unencryptedKeys =
         this.secretManagementService.getKeys(
@@ -65,7 +62,7 @@ public class GetKeysService {
       final Map<SecurityKeyType, byte[]> unencryptedKeys) {
     return unencryptedKeys.entrySet().stream()
         .map(entry -> this.convertToKeyDtoWithEncryptedKey(entry.getKey(), entry.getValue()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private KeyDto convertToKeyDtoWithEncryptedKey(
